--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,7 @@
 /19.-CajeroHilos/target/
 /20.-Movimiento_Hilos/target/
 /25_Servlet/target/
+/Changuitos/nbproject/private/
+/Changuitos/build/
+/26_BD/nbproject/private/
+/26_BD/build/
