--- a/26_BD/web/WEB-INF/web.xml
+++ b/26_BD/web/WEB-INF/web.xml
@@ -1,17 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app version="3.1" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
     <servlet>
-        <servlet-name>Directorio</servlet-name>
-        <servlet-class>back.Directorio</servlet-class>
-    </servlet>
-    <servlet>
         <servlet-name>registrousuario</servlet-name>
-        <servlet-class>back.registrousuario</servlet-class>
+        <servlet-class>registrousuario</servlet-class>
     </servlet>
-    <servlet-mapping>
-        <servlet-name>Directorio</servlet-name>
-        <url-pattern>/Directorio</url-pattern>
-    </servlet-mapping>
     <servlet-mapping>
         <servlet-name>registrousuario</servlet-name>
         <url-pattern>/registrousuario</url-pattern>
